--- a/custom_components/home_maintenance/services.yaml
+++ b/custom_components/home_maintenance/services.yaml
@@ -10,3 +10,10 @@ reset_last_performed:
       selector:
         entity:
           domain: binary_sensor
+    performed_date:
+      name: Performed Date
+      description: Optionally specify the date the task was last performed.
+      required: false
+      example: "2025-06-01"
+      selector:
+        date:
