--- a/custom_components/home_maintenance/manifest.json
+++ b/custom_components/home_maintenance/manifest.json
@@ -17,5 +17,5 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/TJPoorman/home_maintenance/issues",
   "requirements": [],
-  "version": "1.0.0"
+  "version": "v0.0.0"
 }
