--- a/custom_components/home_maintenance/panel/package.json
+++ b/custom_components/home_maintenance/panel/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "custom-card-helpers": "^1.9.0",
     "@material/mwc-select": "latest",
-    "@material/mwc-list": "latest"
+    "@material/mwc-list": "latest",
+    "@mdi/js": "7.4.47",
+    "@mdi/svg": "7.4.47"
   }
 }
